# back/products/models.py
@@ -1,6 +1,11 @@
+"""Models file"""
+
 from pydantic import BaseModel, Field
 
+
 class Product(BaseModel):
+    """Product class"""
+
     id: int
     code: str
     name: str
@@ -11,3 +16,27 @@ class Product(BaseModel):
     category: str
     image: str | None = None
     rating: int | None = None
+
+    class Config:
+        """Extra config to unauthorized extra attributes"""
+
+        extra = "forbid"
+
+
+class ProductToUpdate(BaseModel):
+    """Product class for update"""
+
+    code: str | None = None
+    name: str | None = None
+    description: str | None = None
+    price: int | None = None
+    quantity: int | None = None
+    inventory_status: str | None = Field(alias="inventoryStatus", default=None)
+    category: str | None = None
+    image: str | None = None
+    rating: int | None = None
+
+    class Config:
+        """Extra config to unauthorized extra attributes"""
+
+        extra = "forbid"
